styles.css
body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}


/*Navigation*/
nav {
    background-color: #1F2937;
    color: #f9faf8;
    padding-top: 15px;

}

nav .container {
    margin: 0 25vh;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav-links {
    list-style-type: none;
    display: flex;
    gap: 24px;
}

.nav-links a {
    text-decoration: none;
    color: #f9faf8;
    font-weight: 300;
}

.logo {
    font-size: 24px;
    font-weight: 700;
}

.nav-links a:hover {
    color: #969696;
}

/*Header*/
header {
    background-color: #1F2937;
    color: #f9faf8;
}

header .container {
    margin: 10vh 25vh;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    align-items: center;
    gap: 48px;
}

header img {
    width: 400px;
}

header .button {
    background-color: #3882f6;
    color: #f9faf8;
    font-weight: 600;
    padding: 6px 24px;
    border-radius: 8px;
    border: none;
}
/*Random Information*/
.random-info .container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 2vh 25vh 10vh;
}

.cards {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 24px;
    width: 100%;
}

.cards .item {
    display: flex;
    flex-direction: column;
    width: 200px;
    text-align: center;
}

.cards img {
    width: 100%;
    height: 200px;
    border-radius: 8px;
}

/*Block Quote*/
.block-quote {
    background-color: #e5e7eb;
}

blockquote {
    display: flex;
    flex-direction: column;
    margin: 5vh 25vh;
    font-size: 36px;
    color: #1F2937;
}

blockquote p {
    font-weight: 100;
    font-style: italic;
}

blockquote span {
    align-self: flex-end;
}

/*Call to action*/
.cta {
    padding: 15vh 25vh; 
}

.cta .container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    margin: 0 auto;
    background-color: #3882f6;
    border-radius: 8px;
    padding: 36px 32px;
    color: #f9faf8;
}

.cta-text {
    line-height: 1.5px;
}

.cta .button {
    background-color: #3882f6;
    color: #f9faf8;
    border: 2px solid #f9faf8;
    border-radius: 6px;
    padding: 6px 24px;
    font-weight: 600;
}

.button:hover {
    background-color: #f9faf8;
    color: #3882f6;
    cursor: pointer;
}

/*Footer*/
footer {
    background-color: #1F2937;
    color: #f9faf8;
    padding: 36px 0;
    text-align: center;
}

